Fixed alignement (again)

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ img.custom-icon{
   top: -10px;
 }
 
-div.custom-icon.toronto{
+div.toronto{
   top: -20px;
 }
 .custom-icon.toronto{
